# nextage_core

./: .gitignore  README.md
nextage_a_description/: CMakeLists.txt  package.xml
nextage_a_description/launch/: nextage_a_rviz.launch.xml
nextage_a_description/rviz/: nextage_a.rviz
nextage_a_description/urdf/: NextageAOpen.urdf.xacro  NextageAOpen_gazebo.urdf.xacro  NextageAOpen_gazebo_intel_realsense.urdf.xacro  NextageAOpen_gazebo_intel_realsense_with_Azure_topics.urdf.xacro  NextageAOpen_gazebo_kinect.urdf.xacro  NextageA_base.xacro  NextageA_robot.xacro  common.xacro
nextage_description/urdf/general/: common.xacro
nextage_description/urdf/robot/: NXA_default.xacro  nextage_robot.xacro
nextagea_description/urdf/: NextageAOpen.urdf  NextageAOpen.urdf.xacro  NextageA_robot.xacro  nxao_gz_camera.xacro
nextagea_description/urdf/meshes/: end_effector-Assembly.stl
nextagea_gazebo/: CMakeLists.txt  package.xml
nextagea_moveit_config/: CMakeLists.txt
nextagea_moveit_config/config/: NextageAOpen.srdf
