<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nextage_a_description</name>
  <version>0.0.0</version>
  <description>nextage_a_description package</description>
  <maintainer email="jshim@ed.ac.uk">Jaehyun Shim</maintainer>
  <license>BSD</license>
  <author email="jshim@ed.ac.uk">Jaehyun Shim</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/../"/> -->
  </export>
</package>
